data/issues_raw/buildinstall/buildinstall_train_6349.txt
compile tensorflow with option "-xMIC-AVX512" on INTEL XEON PHI PROCESSORS failed～～

Hi,All,Thanks for your time.
I'm guest of a server with INTEL XEON PHI PROCESSORS(KNL) with CentOS7.
I set my own env at first and compile bazel(0.3.2) and tensorflow(v0.9.0rc0) successfully(CC=gcc).
(1) I set my own env as follows(most of it):
export HOME=/home/guest
export HOME_USR=$HOME/usr
export JAVA_HOME=$HOME/jdk1.8.0_112
export PATH=$HOME/intel/bin:$HOME/bazel_bin:$HOME_USR/bin:$JAVA_HOME/bin:$PATH
export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
export CPATH=$HOME_USR/include:$HOME/intel/include
export C_INCLUDE_PATH=$CPATH
export CPLUS_INCLUDE_PATH=$CPATH
export LIBRARY_PATH=$HOME_USR/lib:$HOME_USR/lib64:$HOME/intel/lib/intel64_lin_mic/
export LD_LIBRARY_PATH=$LIBRARY_PATH
export LD_RUN_PATH=$LIBRARY_PATH
export COMPILER_PATH=$PATH
export CC=gcc
export PKG_CONFIG_PATH=$HOME_USR/lib/pkgconfig:$PKG_CONFIG_PATH
export PERL5LIB=$HOME_USR
(2)bazel is OK:
./compile.sh
(3)tensorflow is OK:
./configure
bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
(4)Then the problem comes,I change the env CC=icpc , and run:
bazel build -c opt --copt=-xMIC-AVX512 //tensorflow/tools/pip_package:build_pip_package

ERROR: /home/guest/.cache/bazel/_bazel_guest/ac941aabf1be9475583be832ae449128/external/gif_archive/BUILD:6:1: C++ compilation of rule '@gif_archive//:gif' failed: icpc failed: error executing command
(cd /home/guest/.cache/bazel/_bazel_guest/ac941aabf1be9475583be832ae449128/execroot/tensorflow && \
exec env - \

LD_LIBRARY_PATH=/home/guest/usr/lib:/home/guest/usr/lib64:/home/guest/cuda/lib64:/home/guest/cuda/lib64:/home/guest/cudnn:/home/guest/intel/lib/intel64_lin_mic/ \



PATH=/home/guest/intel/bin:/home/guest/bazel_bin:/home/guest/usr/bin:/home/guest/cuda/bin:/home/guest/jdk1.8.0_112/bin:/usr/lib64/mpich/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/guest/.local/bin:/home/guest/bin \


/home/guest/intel/bin/icpc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wl,-z,-relro,-z,now -B/home/guest/intel/bin -B/usr/bin -Wunused-but-set-parameter -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -g0 -MD -MF bazel-out/host/bin/external/gif_archive/objs/gif/external/gif_archive/gif_font.d -iquote external/gif_archive -iquote bazel-out/host/genfiles/external/gif_archive -iquote external/bazel_tools -iquote bazel-out/host/genfiles/external/bazel_tools -isystem external/gif_archive -isystem bazel-out/host/genfiles/external/gif_archive -isystem external/bazel_tools/tools/cpp/gcc3 -Wno-builtin-macro-redefined '-D__DATE_="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -c external/gif_archive/gif_font.c -o bazel-out/host/bin/external/gif_archive/_objs/gif/external/gif_archive/gif_font.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 2.
icpc: command line warning #10006: ignoring unknown option '-Wno-builtin-macro-redefined'
Warning #2011: predefined meaning of "DATE" discarded

Warning #2011: predefined meaning of "TIMESTAMP" discarded

Warning #2011: predefined meaning of "TIME" discarded

external/gif_archive/gif_font.c(231): error: a value of type "void *" cannot be assigned to an entity of type "char *"

  dup = malloc(strlen(legend)+1);



      ^



compilation aborted for external/gif_archive/gif_font.c (code 2)
Target //tensorflow/tools/pip_package:build_pip_package failed to build

(5)I've found a similar problem here :
#4775
but I don't know how to solve this problem?
I update bazel by "git checkout tags/0.4.2" under bazel, and try to ./compile.sh again(CC=icpc),but it doesn't work.